--- a/mage_ai/frontend/styles/scss/abstracts/_mixins.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/_mixins.scss
@@ -1,4 +1,4 @@
-@use './variables';
+@import './variables';
 
 @mixin transition {
   transition: 0.2s all ease-in-out;
@@ -13,39 +13,4 @@
   background-image: -moz-linear-gradient($angle, $start-color $start-percentage, $end-color $end-percentage);
   background-image: -o-linear-gradient($angle, $start-color $start-percentage, $end-color $end-percentage);
   background-image: linear-gradient($angle, $start-color $start-percentage, $end-color $end-percentage);
-}
-
-@mixin outline-hover($active: false, $border-color: null, $outline-color: null, $outline-offset: null, $outline-width: null) {
-  &:hover {
-    box-shadow:
-      0 0 0 ($borders-outline-offset + if($outline-offset, $outline-offset, 0))
-        if($border-color, $border-color, var(--backgrounds-button-base-default)),
-      0 0 0 ($borders-outline-offset + if($outline-offset, $outline-offset, 0) +
-        $borders-outline-width + if($outline-width, $outline-width, 0))
-        if($outline-color, $outline-color, var(--colors-purple));
-  }
-
-  &:focus {
-    box-shadow:
-      0 0 0 ($borders-outline-offset + if($outline-offset, $outline-offset, 0))
-        if($border-color, $border-color, var(--backgrounds-button-base-default)),
-      0 0 0 ($borders-outline-offset + if($outline-offset, $outline-offset, 0) +
-        $borders-outline-width + if($outline-width, $outline-width, 0))
-        if($outline-color, $outline-color, var(--colors-purple));
-  }
-
-  @if not $active {
-    &:active {
-      box-shadow: none;
-    }
-  } @else {
-    &:active {
-      box-shadow:
-        0 0 0 ($borders-outline-offset + if($outline-offset, $outline-offset, 0))
-          if($border-color, $border-color, var(--backgrounds-button-base-default)),
-        0 0 0 ($borders-outline-offset + if($outline-offset, $outline-offset, 0) +
-          $borders-outline-width + if($outline-width, $outline-width, 0))
-          if($outline-color, $outline-color, var(--colors-purple));
-    }
-  }
 }
