--- a/mage_ai/frontend/styles/scss/abstracts/colors/_dark.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/colors/_dark.scss
@@ -17,8 +17,8 @@ $colors-glow2: #0500ff;
 $colors-glow: #0500ff66;
 $colors-gray: #34404c;
 $colors-grayhi: #34404cd9;
-$colors-graylo: #34404c33;
-$colors-graymd: #34404cb3;
+$colors-graylo: #34404C33;
+$colors-graymd: #34404CB3;
 $colors-green: #00c868;
 $colors-greenhi: #00c868d9;
 $colors-greenlo: #00c86833;
@@ -61,7 +61,7 @@ $colors-yellowmd: #ffcc19;
 /* ----------------------------------------------------------------------------------------------- */
 $backgrounds-body: #000000;
 $backgrounds-button-base-default: #28333d;
-$backgrounds-button-base-hover: #34404cb3;
+$backgrounds-button-base-hover: $colors-graymd;
 $backgrounds-button-basic-default: transparent;
 $backgrounds-button-basic-hover: #ffffff1a;
 $backgrounds-button-primary-default: #956fff;
@@ -72,26 +72,15 @@ $backgrounds-input-base-active: radial-gradient( 155.7% 118.3% at 22.25% 145.77%
 $backgrounds-input-base-default: radial-gradient( 155.7% 118.3% at 22.25% 145.77%, rgba(42, 76, 255, 0.08) 0%, rgba(42, 76, 255, 0.00) 100% ), rgba(42, 76, 255, 0.10);
 $backgrounds-input-base-focus: radial-gradient( 155.7% 118.3% at 22.25% 145.77%, rgba(42, 76, 255, 0.08) 0%, rgba(42, 76, 255, 0.00) 100% ), rgba(42, 76, 255, 0.10);
 $backgrounds-input-base-hover: radial-gradient( 155.7% 118.3% at 22.25% 145.77%, rgba(42, 76, 255, 0.08) 0%, rgba(42, 76, 255, 0.00) 100% ), rgba(42, 76, 255, 0.10);
-$backgrounds-menu-base-default: #34404cb3;
+$backgrounds-menu-base-default: $colors-graymd;
 $backgrounds-menu-contained-default: #34404c;
 $backgrounds-scrollbar-thumb-default: #34404c;
 $backgrounds-scrollbar-thumb-hover: #ffffff80;
-$backgrounds-scrollbar-track-default: #34404c33;
-$backgrounds-scrollbar-track-hover: #34404cb3;
+$backgrounds-scrollbar-track-default: $colors-graylo;
+$backgrounds-scrollbar-track-hover: $colors-graymd;
 $blue: radial-gradient(155.7% 118.3% at 22.25% 145.77%, $colors-bluelo 0%, rgba($colors-blue, 0.00) 100%), rgba($colors-blue, 0.10);
 $borders-color-base-default: #34404c;
 $borders-color-base-hover: #34404cd9;
-$borders-color-black: $colors-black;
-$borders-color-blackfixed: $colors-blackfixed;
-$borders-color-blackhi: $colors-blackhi;
-$borders-color-blacklo: $colors-blacklo;
-$borders-color-blackmd: $colors-blackmd;
-$borders-color-blue: $colors-blue;
-$borders-color-bluehi: $colors-bluehi;
-$borders-color-bluelo: $colors-bluelo;
-$borders-color-bluemd: $colors-bluemd;
-$borders-color-bluemuted: $colors-bluemuted;
-$borders-color-bluetext: $colors-bluetext;
 $borders-color-button-base-default: gray;
 $borders-color-button-base-hover: #34404c;
 $borders-color-button-basic-default: gray;
@@ -100,59 +89,12 @@ $borders-color-button-primary-default: #34404c;
 $borders-color-button-primary-hover: #34404c;
 $borders-color-button-secondary-default: #34404c;
 $borders-color-button-secondary-hover: #34404c;
-$borders-color-dbt: $colors-dbt;
-$borders-color-dbthi: $colors-dbthi;
-$borders-color-dbtlo: $colors-dbtlo;
-$borders-color-dbtmd: $colors-dbtmd;
-$borders-color-glow2: $colors-glow2;
-$borders-color-glow: $colors-glow;
-$borders-color-gray: $colors-gray;
-$borders-color-grayhi: $colors-grayhi;
-$borders-color-graylo: $colors-graylo;
-$borders-color-graymd: $colors-graymd;
-$borders-color-green: $colors-green;
-$borders-color-greenhi: $colors-greenhi;
-$borders-color-greenlo: $colors-greenlo;
-$borders-color-greenmd: $colors-greenmd;
 $borders-color-input-base-active: #1f6bff;
 $borders-color-input-base-default: #0500ff;
 $borders-color-input-base-focus: #1f6bff;
 $borders-color-input-base-hover: #1f6bff;
 $borders-color-muted-default: graylo;
-$borders-color-muted-hover: #34404c33;
-$borders-color-pink: $colors-pink;
-$borders-color-pinkhi: $colors-pinkhi;
-$borders-color-pinklo: $colors-pinklo;
-$borders-color-pinkmd: $colors-pinkmd;
-$borders-color-purple: $colors-purple;
-$borders-color-purplehi: $colors-purplehi;
-$borders-color-purplelo: $colors-purplelo;
-$borders-color-purplemd: $colors-purplemd;
-$borders-color-red: $colors-red;
-$borders-color-redhi: $colors-redhi;
-$borders-color-redlo: $colors-redlo;
-$borders-color-redmd: $colors-redmd;
-$borders-color-rose: $colors-rose;
-$borders-color-rosehi: $colors-rosehi;
-$borders-color-roselo: $colors-roselo;
-$borders-color-rosemd: $colors-rosemd;
-$borders-color-sky: $colors-sky;
-$borders-color-skyhi: $colors-skyhi;
-$borders-color-skylo: $colors-skylo;
-$borders-color-skymd: $colors-skymd;
-$borders-color-teal: $colors-teal;
-$borders-color-tealhi: $colors-tealhi;
-$borders-color-teallo: $colors-teallo;
-$borders-color-tealmd: $colors-tealmd;
-$borders-color-white: $colors-white;
-$borders-color-whitefixed: $colors-whitefixed;
-$borders-color-whitehi: $colors-whitehi;
-$borders-color-whitelo: $colors-whitelo;
-$borders-color-whitemd: $colors-whitemd;
-$borders-color-yellow: $colors-yellow;
-$borders-color-yellowhi: $colors-yellowhi;
-$borders-color-yellowlo: $colors-yellowlo;
-$borders-color-yellowmd: $colors-yellowmd;
+$borders-color-muted-hover: $colors-graylo;
 $buttons-border-color-base-default: gray;
 $buttons-border-color-base-hover: #34404c;
 $buttons-border-color-basic-default: gray;
@@ -186,10 +128,10 @@ $inputs-border-color-base-default: #0500ff;
 $inputs-border-color-base-focus: #1f6bff;
 $inputs-border-color-base-hover: #1f6bff;
 $inputs-placeholder-color: #ffffff80;
-$menus-background-base-default: #34404cb3;
+$menus-background-base-default: $colors-graymd;
 $menus-background-contained-default: #34404c;
 $menus-blur-base: saturate(100%) blur(3px);
 $scrollbars-background-thumb-default: #34404c;
 $scrollbars-background-thumb-hover: #ffffff80;
-$scrollbars-background-track-default: #34404c33;
-$scrollbars-background-track-hover: #34404cb3;
+$scrollbars-background-track-default: $colors-graylo;
+$scrollbars-background-track-hover: $colors-graymd;
