--- a/mage_ai/frontend/styles/scss/base/_borders.scss
+++ b/mage_ai/frontend/styles/scss/base/_borders.scss
@@ -1,3 +1,14 @@
+@use '../abstracts/helpers' as *;
+
+@mixin border-colors() {
+  @each $value in $colors-names {
+    &.border-color-#{$value} {
+      @include shared;
+      border-color: var(--colors-#{$value});
+    }
+  }
+}
+
 @mixin shared {
   border-radius: var(--borders-radius-base);
   border-style: var(--borders-style);
@@ -6,6 +17,8 @@
 
 @mixin base($muted: false) {
   @include shared;
+  @incldue border-colors();
+
   border-color: if($muted, var(--borders-color-muted-default), var(--borders-color-base-default));
 }
 
