--- a/mage_ai/frontend/styles/scss/modes/_dark.scss
+++ b/mage_ai/frontend/styles/scss/modes/_dark.scss
@@ -1,43 +1,38 @@
 @use '../abstracts/colors/dark' as colors;
-
-@mixin dark-mode() {
+@mixin mode() {
   --colors-black: #{colors.$colors-black};
   --colors-blackfixed: #{colors.$colors-blackfixed};
+  --colors-blackhi: #{colors.$colors-blackhi};
   --colors-blacklo: #{colors.$colors-blacklo};
   --colors-blackmd: #{colors.$colors-blackmd};
-  --colors-blackhi: #{colors.$colors-blackhi};
   --colors-blue: #{colors.$colors-blue};
   --colors-bluehi: #{colors.$colors-bluehi};
   --colors-bluelo: #{colors.$colors-bluelo};
   --colors-bluemd: #{colors.$colors-bluemd};
   --colors-bluemuted: #{colors.$colors-bluemuted};
   --colors-bluetext: #{colors.$colors-bluetext};
-  --colors-teal: #{colors.$colors-teal};
-  --colors-tealhi: #{colors.$colors-tealhi};
-  --colors-teallo: #{colors.$colors-teallo};
-  --colors-tealmd: #{colors.$colors-tealmd};
   --colors-dbt: #{colors.$colors-dbt};
   --colors-dbthi: #{colors.$colors-dbthi};
   --colors-dbtlo: #{colors.$colors-dbtlo};
   --colors-dbtmd: #{colors.$colors-dbtmd};
-  --colors-glow: #{colors.$colors-glow};
   --colors-glow2: #{colors.$colors-glow2};
+  --colors-glow: #{colors.$colors-glow};
   --colors-gray: #{colors.$colors-gray};
+  --colors-grayhi: #{colors.$colors-grayhi};
   --colors-graylo: #{colors.$colors-graylo};
   --colors-graymd: #{colors.$colors-graymd};
-  --colors-grayhi: #{colors.$colors-grayhi};
   --colors-green: #{colors.$colors-green};
+  --colors-greenhi: #{colors.$colors-greenhi};
   --colors-greenlo: #{colors.$colors-greenlo};
   --colors-greenmd: #{colors.$colors-greenmd};
-  --colors-greenhi: #{colors.$colors-greenhi};
   --colors-pink: #{colors.$colors-pink};
+  --colors-pinkhi: #{colors.$colors-pinkhi};
   --colors-pinklo: #{colors.$colors-pinklo};
   --colors-pinkmd: #{colors.$colors-pinkmd};
-  --colors-pinkhi: #{colors.$colors-pinkhi};
   --colors-purple: #{colors.$colors-purple};
+  --colors-purplehi: #{colors.$colors-purplehi};
   --colors-purplelo: #{colors.$colors-purplelo};
   --colors-purplemd: #{colors.$colors-purplemd};
-  --colors-purplehi: #{colors.$colors-purplehi};
   --colors-red: #{colors.$colors-red};
   --colors-redhi: #{colors.$colors-redhi};
   --colors-redlo: #{colors.$colors-redlo};
@@ -50,17 +45,21 @@
   --colors-skyhi: #{colors.$colors-skyhi};
   --colors-skylo: #{colors.$colors-skylo};
   --colors-skymd: #{colors.$colors-skymd};
+  --colors-statuses-success: #{colors.$colors-statuses-success};
+  --colors-statuses-successhi: #{colors.$colors-statuses-successhi};
+  --colors-teal: #{colors.$colors-teal};
+  --colors-tealhi: #{colors.$colors-tealhi};
+  --colors-teallo: #{colors.$colors-teallo};
+  --colors-tealmd: #{colors.$colors-tealmd};
+  --colors-white: #{colors.$colors-white};
+  --colors-whitefixed: #{colors.$colors-whitefixed};
+  --colors-whitehi: #{colors.$colors-whitehi};
+  --colors-whitelo: #{colors.$colors-whitelo};
+  --colors-whitemd: #{colors.$colors-whitemd};
   --colors-yellow: #{colors.$colors-yellow};
   --colors-yellowhi: #{colors.$colors-yellowhi};
   --colors-yellowlo: #{colors.$colors-yellowlo};
   --colors-yellowmd: #{colors.$colors-yellowmd};
-  --colors-white: #{colors.$colors-white};
-  --colors-whitefixed: #{colors.$colors-whitefixed};
-  --colors-whitelo: #{colors.$colors-whitelo};
-  --colors-whitemd: #{colors.$colors-whitemd};
-  --colors-whitehi: #{colors.$colors-whitehi};
-  --colors-statuses-success: #{colors.$colors-statuses-success};
-  --colors-statuses-successhi: #{colors.$colors-statuses-successhi};
   --backgrounds-body: #{colors.$backgrounds-body};
   --backgrounds-button-base-default: #{colors.$backgrounds-button-base-default};
   --backgrounds-button-base-hover: #{colors.$backgrounds-button-base-hover};
@@ -80,6 +79,7 @@
   --backgrounds-scrollbar-thumb-hover: #{colors.$backgrounds-scrollbar-thumb-hover};
   --backgrounds-scrollbar-track-default: #{colors.$backgrounds-scrollbar-track-default};
   --backgrounds-scrollbar-track-hover: #{colors.$backgrounds-scrollbar-track-hover};
+  --blue: #{colors.$blue};
   --borders-color-base-default: #{colors.$borders-color-base-default};
   --borders-color-base-hover: #{colors.$borders-color-base-hover};
   --borders-color-button-base-default: #{colors.$borders-color-button-base-default};
@@ -96,64 +96,6 @@
   --borders-color-input-base-hover: #{colors.$borders-color-input-base-hover};
   --borders-color-muted-default: #{colors.$borders-color-muted-default};
   --borders-color-muted-hover: #{colors.$borders-color-muted-hover};
-  --borders-color-black: #{colors.$borders-color-black};
-  --borders-color-blackfixed: #{colors.$borders-color-blackfixed};
-  --borders-color-blacklo: #{colors.$borders-color-blacklo};
-  --borders-color-blackmd: #{colors.$borders-color-blackmd};
-  --borders-color-blackhi: #{colors.$borders-color-blackhi};
-  --borders-color-blue: #{colors.$borders-color-blue};
-  --borders-color-bluehi: #{colors.$borders-color-bluehi};
-  --borders-color-bluelo: #{colors.$borders-color-bluelo};
-  --borders-color-bluemd: #{colors.$borders-color-bluemd};
-  --borders-color-bluemuted: #{colors.$borders-color-bluemuted};
-  --borders-color-bluetext: #{colors.$borders-color-bluetext};
-  --borders-color-teal: #{colors.$borders-color-teal};
-  --borders-color-tealhi: #{colors.$borders-color-tealhi};
-  --borders-color-teallo: #{colors.$borders-color-teallo};
-  --borders-color-tealmd: #{colors.$borders-color-tealmd};
-  --borders-color-dbt: #{colors.$borders-color-dbt};
-  --borders-color-dbthi: #{colors.$borders-color-dbthi};
-  --borders-color-dbtlo: #{colors.$borders-color-dbtlo};
-  --borders-color-dbtmd: #{colors.$borders-color-dbtmd};
-  --borders-color-glow: #{colors.$borders-color-glow};
-  --borders-color-glow2: #{colors.$borders-color-glow2};
-  --borders-color-gray: #{colors.$borders-color-gray};
-  --borders-color-graylo: #{colors.$borders-color-graylo};
-  --borders-color-graymd: #{colors.$borders-color-graymd};
-  --borders-color-grayhi: #{colors.$borders-color-grayhi};
-  --borders-color-green: #{colors.$borders-color-green};
-  --borders-color-greenlo: #{colors.$borders-color-greenlo};
-  --borders-color-greenmd: #{colors.$borders-color-greenmd};
-  --borders-color-greenhi: #{colors.$borders-color-greenhi};
-  --borders-color-pink: #{colors.$borders-color-pink};
-  --borders-color-pinklo: #{colors.$borders-color-pinklo};
-  --borders-color-pinkmd: #{colors.$borders-color-pinkmd};
-  --borders-color-pinkhi: #{colors.$borders-color-pinkhi};
-  --borders-color-purple: #{colors.$borders-color-purple};
-  --borders-color-purplelo: #{colors.$borders-color-purplelo};
-  --borders-color-purplemd: #{colors.$borders-color-purplemd};
-  --borders-color-purplehi: #{colors.$borders-color-purplehi};
-  --borders-color-red: #{colors.$borders-color-red};
-  --borders-color-redhi: #{colors.$borders-color-redhi};
-  --borders-color-redlo: #{colors.$borders-color-redlo};
-  --borders-color-redmd: #{colors.$borders-color-redmd};
-  --borders-color-rose: #{colors.$borders-color-rose};
-  --borders-color-rosehi: #{colors.$borders-color-rosehi};
-  --borders-color-roselo: #{colors.$borders-color-roselo};
-  --borders-color-rosemd: #{colors.$borders-color-rosemd};
-  --borders-color-sky: #{colors.$borders-color-sky};
-  --borders-color-skyhi: #{colors.$borders-color-skyhi};
-  --borders-color-skylo: #{colors.$borders-color-skylo};
-  --borders-color-skymd: #{colors.$borders-color-skymd};
-  --borders-color-yellow: #{colors.$borders-color-yellow};
-  --borders-color-yellowhi: #{colors.$borders-color-yellowhi};
-  --borders-color-yellowlo: #{colors.$borders-color-yellowlo};
-  --borders-color-yellowmd: #{colors.$borders-color-yellowmd};
-  --borders-color-white: #{colors.$borders-color-white};
-  --borders-color-whitefixed: #{colors.$borders-color-whitefixed};
-  --borders-color-whitelo: #{colors.$borders-color-whitelo};
-  --borders-color-whitemd: #{colors.$borders-color-whitemd};
-  --borders-color-whitehi: #{colors.$borders-color-whitehi};
   --buttons-border-color-base-default: #{colors.$buttons-border-color-base-default};
   --buttons-border-color-base-hover: #{colors.$buttons-border-color-base-hover};
   --buttons-border-color-basic-default: #{colors.$buttons-border-color-basic-default};
@@ -194,5 +136,4 @@
   --scrollbars-background-thumb-hover: #{colors.$scrollbars-background-thumb-hover};
   --scrollbars-background-track-default: #{colors.$scrollbars-background-track-default};
   --scrollbars-background-track-hover: #{colors.$scrollbars-background-track-hover};
-  --blue: #{colors.$blue};
 }
