--- a/mage_ai/frontend/styles/scss/modes/_light.scss
+++ b/mage_ai/frontend/styles/scss/modes/_light.scss
@@ -1,6 +1,5 @@
 @use '../abstracts/colors/light' as colors;
-
-@mixin light-mode() {
+@mixin mode() {
   --colors-black: #{colors.$colors-black};
   --colors-blackfixed: #{colors.$colors-blackfixed};
   --colors-blacklo: #{colors.$colors-blacklo};
