--- a/mage_ai/frontend/styles/scss/themes/dark.scss
+++ b/mage_ai/frontend/styles/scss/themes/dark.scss
@@ -1,5 +1,7 @@
 @use '../modes/dark' as mode;
+@use './base';
 
 body[data-theme="dark"] {
-  @include mode.dark-mode();
+  @include mode.mode();
+  @include base.base();
 }
