--- a/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
@@ -1,5 +1,9 @@
+@use '../../../base/borders';
+
 .blockNode {
-  &.dragging {
-    opacity: 0.5;
-  }
+  @include borders.border-colors();
+
+  background-color: var(--background-color);
+  padding: var(--padding-base);
+  min-width: 312px;
 }
