--- a/mage_ai/frontend/styles/scss/abstracts/colors/_dark.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/colors/_dark.scss
@@ -115,7 +115,7 @@ $fonts-color-button-base: #ffffff;
 $fonts-color-text-base: #ffffff;
 $fonts-color-text-blue: #1f6bff;
 $fonts-color-text-inverted: #000000;
-$fonts-color-text-muted: #ffffff99;
+$fonts-color-text-muted: $colors-whitemd;
 $fonts-color-text-warning: $colors-yellow;
 $icons-color-base: #ffffff;
 $icons-color-inverted: #000000;
