--- a/mage_ai/frontend/styles/scss/elements/Circle.module.scss
+++ b/mage_ai/frontend/styles/scss/elements/Circle.module.scss
@@ -1,4 +1,5 @@
 @use '../base/backgrounds';
+@use '../base/borders';
 
 $numbers: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20;
 
@@ -13,8 +14,8 @@ $numbers: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20;
 
 .circle {
   @include backgrounds.background-colors();
+  @include borders.border-colors();
   @include size();
 
-  border-color: var(--colors-graylo);
   border-radius: 50%;
 }
