--- a/mage_ai/frontend/styles/scss/base/_svg.scss
+++ b/mage_ai/frontend/styles/scss/base/_svg.scss
@@ -11,3 +11,27 @@
     }
   }
 }
+
+@mixin gradient() {
+  @each $value in $colors-names {
+    &.stop-color-#{$value} {
+      stop-color: var(--colors-#{$value});
+    }
+  }
+
+  @each $value1 in $numbers-more {
+    &.stop-opacity-#{$value1 * 5} {
+      stop-opacity: #{($value1 * 5) / 100};
+    }
+  }
+}
+
+@mixin stroke-width() {
+  stroke-width: 1.5;
+
+  @each $value1 in $numbers-more {
+    &.stroke-width-#{$value1} {
+      stroke-width: #{$value1}px;
+    }
+  }
+}
