--- a/mage_ai/frontend/styles/scss/base/_grid.scss
+++ b/mage_ai/frontend/styles/scss/base/_grid.scss
@@ -1,9 +1,8 @@
 @use '../base/backgrounds' as backgrounds;
 @use '../base/borders' as borders;
 @use '../base/paddings' as paddings;
+@use '../abstracts/helpers' as *;
 
-$numbers: 1, 2, 3, 4;
-$numbers-more: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20;
 $keyword-values: min-content, max-content, auto, fit-content, minmax, inherit, initial, unset, revert, revert-layer;
 
 @mixin display(
