--- a/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
@@ -3,7 +3,7 @@
 .blockNode {
   @include borders.border-colors();
 
-  background-color: var(--background-color);
+  /* background-color: var(--background-color); */
   padding: var(--padding-base);
   min-width: 312px;
 }
