fix groups laying out in tree

--- a/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
@@ -3,8 +3,9 @@
 .blockNode {
   @include borders.border-colors();
 
-  padding: var(--padding-base);
+  height: inherit;
   min-width: 312px;
+  padding: var(--padding-base);
 }
 
 @mixin hidden {
