--- a/mage_ai/frontend/styles/scss/elements/GradientContainer.module.scss
+++ b/mage_ai/frontend/styles/scss/elements/GradientContainer.module.scss
@@ -1,21 +1,27 @@
 @use '../base/backgrounds';
+@use '../base/borders';
 @use '../base/gradients';
 
 .gradient-outter {
+  @include borders.border-colors();
   @include gradients.gradient-colors();
 
   border-radius: var(--borders-radius-base);
+  height: inherit;
   overflow: hidden; // To clip children with border-radius
   padding: var(--borders-outline-width); // Space for the border
   position: relative;
+  display: grid;
+  justify-items: stretch;
 }
 
 
 .gradient-inner {
   @include backgrounds.background-colors();
 
-  background-color: var(--background-color);
-  border-radius: inherit;
+  background-color: var(--backgrounds-body);
+  border-radius: calc(var(--borders-radius-base) - 2px);
   border: none;
+  /* height: inherit; */
   overflow: hidden; // To clip children with border-radius
 }
