--- a/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
@@ -6,13 +6,13 @@
 
 @mixin hidden {
   opacity: 0.8;
-  pointer-events: none;
+  /* pointer-events: none; */
   z-index: 3;
 }
 
 @mixin visible {
   opacity: 1;
-  z-index: 2;
+  z-index: 1;
 }
 
 .blockNode {
@@ -26,9 +26,17 @@
 .nodeWrapper {
   z-index: 1;
 
-  &.focus-level-0 {
+  &.block {
     @include base-level;
+    z-index: 2;
+  }
 
+  &.node {
+    @include base-level;
+    z-index: 1;
+  }
+
+  &.focus-level-0 {
     &.block {
       @include visible;
     }
@@ -39,8 +47,6 @@
   }
 
   &.focus-level-1 {
-    @include base-level;
-
     &.block {
       @include hidden;
     }
