toggle group levels

--- a/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
@@ -5,9 +5,9 @@
 }
 
 @mixin hidden {
-  opacity: 0.8;
-  /* pointer-events: none; */
-  z-index: 3;
+  /* opacity: 0.8;
+  pointer-events: none;
+  z-index: 3; */
 }
 
 @mixin visible {
