--- a/mage_ai/frontend/styles/scss/apps/Canvas/Pipelines/Builder.module.scss
+++ b/mage_ai/frontend/styles/scss/apps/Canvas/Pipelines/Builder.module.scss
@@ -1,3 +1,4 @@
+@use '../../../abstracts/helpers' as *;
 @use '../../../base/svg';
 
 $grid-size: 40px;
@@ -44,6 +45,22 @@ $grid-size: 40px;
         var(--colors-graylo) calc(#{$grid-size} - 1px),
         var(--colors-graylo) $grid-size
       );
+  }
+
+  @each $value1 in $numbers-more {
+    &.level-#{$value1}-active {
+      .level-#{$value1} {
+        opacity: 1;
+        pointer-events: all;
+        z-index: 3;
+      }
+    }
+  }
+
+  .level {
+    opacity: 0;
+    pointer-events: none;
+    z-index: -1;
   }
 }
 
