fix positioning, working on path

--- a/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
@@ -1,4 +1,5 @@
 @use '../../../base/borders';
+@use '../../../base/grid';
 
 .blockNode {
   @include borders.border-colors();
@@ -9,6 +10,8 @@
 }
 
 .nodeWrapper {
+  @include grid.base();
+
   &.block {
     z-index: 6;
   }
